--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,7 @@ body{
 	z-index: 0;
 }
 
-/*.location-search {
-	right: 0;
-}*/
+/* Input form for search */
 #searchbox {
 	position: relative;
 	float: right;
@@ -40,6 +38,7 @@ body{
 	float: left;
 }
 
+/* Search Text field */
 #search {
 	padding: 5px 9px;
 	height: 23px;
@@ -51,6 +50,7 @@ body{
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset, 0 1px 0 rgba(255, 255, 255, 1);
 }
 
+/* Submit button */
 #submit
 {       
     background-color: #6cbb6b;
@@ -75,10 +75,8 @@ body{
     background-color: #95d788;
     background-image: linear-gradient(#6cbb6b, #95d788);
 }
-.location-list {
-	width: 100%;
-	height: 100%;
-}
+
+/* List view of locations */
 #locations {
 	position: absolute;
 	float: right;
@@ -103,6 +101,8 @@ body{
 	height: 30px;
 	padding: 5px;
 }
+
+/* Mobile view */
 @media (max-width: 330px) {
 	#searchbox {
 		width: 100%;
