--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-html, body {
+html, 
+body {
 	height: 100%;
 }
 
@@ -16,7 +17,7 @@ body{
 }
 
 /* Input form for search */
-#searchbox {
+.searchbox {
 	position: relative;
 	float: right;
 	z-index: 1;
@@ -33,13 +34,13 @@ body{
 	overflow: hidden;  /*Clear floats */
 }
 
-#search,
-#submit {
+.search,
+.submit {
 	float: left;
 }
 
 /* Search Text field */
-#search {
+.search {
 	padding: 5px 9px;
 	height: 23px;
 	width: 230px;
@@ -51,7 +52,7 @@ body{
 }
 
 /* Submit button */
-#submit
+.submit
 {
 	background-color: #6cbb6b;
 	background-image: linear-gradient(#95d788, #6cbb6b);
@@ -71,13 +72,31 @@ body{
 	text-shadow: 0 1px 0 rgba(255,255,255,0.5);
 }
 
-#submit:hover {
+.submit:hover {
 	background-color: #95d788;
 	background-image: linear-gradient(#6cbb6b, #95d788);
 }
 
+.location-list {
+	position: fixed;
+	width: 100%;
+	height: 500px;
+	right: 0px;
+}
+/*.nav-btn {
+	background:#5681b4;
+	border-radius: 10px 0px 0px 10px;
+	position: absolute;
+	top: 140px;
+	width: 40px;
+	height: 70px;
+	right: 365px;
+	display: block;
+	cursor: pointer;
+}*/
+
 /* List view of locations */
-#locations {
+.locations {
 	position: absolute;
 	float: right;
 	right: 0;
@@ -96,25 +115,30 @@ body{
 	overflow-x: hidden;
 }
 
+/*Each location within the list*/
 .loc {
 	width: 340px;
 	height: 30px;
 	padding: 5px;
+	cursor: pointer;
 }
 
 /* Mobile view */
 @media (max-width: 330px) {
-	#searchbox {
+	.searchbox {
 		width: 100%;
 		float: none;
 	}
-	#search {
+	.search {
 		width: 180px;
 	}
 }
 
 @media (max-width: 450px){
-	#locations {
+	.locations {
 		display: none;
+/*		width: 200px;
+		height: 200px;
+		overflow: scroll;*/
 	}
 }
